--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "@nestjs/websockets": "^11.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "nest-winston": "^1.10.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
