--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/websockets": "^11.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "helmet": "^8.1.0",
     "nest-winston": "^1.10.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
