--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "dotenv": "^16.5.0",
+    "express": "^5.1.0",
     "helmet": "^8.1.0",
     "nest-winston": "^1.10.2",
     "reflect-metadata": "^0.2.0",
