--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nestjs/platform-socket.io": "^11.1.0",
     "@nestjs/serve-static": "^5.0.3",
     "@nestjs/swagger": "^11.2.0",
+    "@nestjs/throttler": "^6.4.0",
     "@nestjs/websockets": "^11.1.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
